--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/Homepage/main.css" />
   <link rel="stylesheet" href="css/pricing/pricing.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>Pricing</title>
 </head>
 
@@ -65,8 +66,6 @@
       <nav class="nav-menu w-nav-menu" id="myLinks">
         <div class="w-dropdown" style="z-index: 999;">
           <div class="w-dropdown-toggle" onclick="whyOpen()">
-            <div class="w-icon-dropdown-toggle">
-            </div>
             <div>Why Stryve</div>
           </div>
 
@@ -359,7 +358,7 @@
                     alt="" class="c-nav__arrow-svg cc-hover">
                 </a></div>
               <div class="c-nav-middle__flex-holder cc-turquoise" onclick="myFunction()">
-                <a data-w-id="76cb24e1-63ba-aed2-336b-0b764f7be43c" href="#" target="_blank"
+                <a data-w-id="76cb24e1-63ba-aed2-336b-0b764f7be43c" target="_blank"
                   class="c-nav__flex-item mg-btm__8 cc-green-hover w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0" rel="noopener noreferrer">
@@ -443,11 +442,32 @@
 
         </div>
         <div class="nav-line__separator"></div>
-        <a href="#" class="w-nav-link">Book a Demo</a>
+        <a href="#" target="_blank" class="w-nav-link" onclick="bookdemo()">Book a Demo</a>
 
-        <a href="#" class="w-nav-link">Sign up</a>
+        <script>
+          function bookdemo() {
+            window.open("bookdemo.html")
+            console.log("You click on book a demo part.")
+          }
+        </script>
 
-        <a href="#" class="c-bg__white w-nav-link">Log in</a>
+        <a href="#" target="_blank" class="w-nav-link" onclick="signup()">Sign up</a>
+
+        <script>
+          function signup() {
+            window.open("signup.html")
+            console.log("You clicked on sign up page")
+          }
+        </script>
+
+        <a href="#" class="c-bg__white w-nav-link" onclick="login()">Log in</a>
+
+        <script>
+          function login() {
+            window.open("login.html")
+            console.log("You clicked on sign up page")
+          }
+        </script>
       </nav>
 
 
@@ -664,17 +684,17 @@
       <div class="c-ctn cc-50">
         <div class="c-header">
           <h1 class="center-text" style="font-weight: 100;">
-            <div class="lineswrap">
+            <div class="lineswrap" data-aos="fade-up">
               <div class="line animate-text" style="display: block; text-align: center; width: 100%; ">
                 Yes, this is the pricing page.
               </div>
             </div>
-            <div class="lineswrap">
+            <div class="lineswrap" data-aos="fade-up">
               <div class="line animate-text" style="display: block; text-align: center; width: 100%;">
                 Book your demo to learn
               </div>
             </div>
-            <div class="lineswrap">
+            <div class="lineswrap" data-aos="fade-up">
               <div class="line animate-text" style="display: block; text-align: center; width: 100%;">
                 more.
               </div>
@@ -1291,7 +1311,7 @@
           <div class="spacer-element"></div>
 
           <div class="c-pricing-btn__holder">
-            <a href="#" class="c-btn cc-with-icon cc-light white w-inline-block">
+            <a href="bookdemo.html" class="c-btn cc-with-icon cc-light white w-inline-block">
               <div class="center-text">Book a demo</div>
               <img class="c-icon__arrow"
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf859f0a065a_arrow%20copy%202.svg">
@@ -1299,7 +1319,7 @@
           </div>
 
           <div class="c-pricing-btn__holder">
-            <a href="#" class="c-btn cc-with-icon cc-light white w-inline-block">
+            <a href="bookdemo.html" class="c-btn cc-with-icon cc-light white w-inline-block">
               <div class="center-text">Book a demo</div>
               <img class="c-icon__arrow"
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf859f0a065a_arrow%20copy%202.svg">
@@ -1307,7 +1327,7 @@
           </div>
 
           <div class="c-pricing-btn__holder">
-            <a href="#" class="c-btn cc-with-icon cc-light white w-inline-block">
+            <a href="bookdemo.html" class="c-btn cc-with-icon cc-light white w-inline-block">
               <div class="center-text">Book a demo</div>
               <img class="c-icon__arrow"
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf859f0a065a_arrow%20copy%202.svg">
@@ -1327,7 +1347,7 @@
       <div class="c-ctn cc-40">
         <div class="c-header center-text">
           <h2 class="center-text p-btm__12">
-            <div class="lineswrap">
+            <div class="lineswrap" data-aos="fade-up">
               <div class="line animate-text" style="display: block; text-align: center; width: 100%;">
                 Frequently asked questions
               </div>
@@ -1349,7 +1369,7 @@
                 </div>
               </div>
 
-              <p class="c-faq__p" style="display: none; opacity: 0;">
+              <p class="c-faq__p">
                 An applicant tracking system (ATS) is a platform used to manage your hiring process. It (should) be the
                 one-stop shop for hosting all of your recruitment-related data. A great ATS will include features like:
                 candidate management, job description templates, analytics, a career site, integrations with third
@@ -1358,6 +1378,7 @@
 
             </div>
           </div>
+
 
           <div class="c-faq__container">
             <div class="flex-wrapper flex-vertical">
@@ -1369,7 +1390,7 @@
                 </div>
               </div>
 
-              <p class="c-faq__p" style="display: none; opacity: 0;">
+              <p class="c-faq__p">
                 We have built two 'out of the box' packages that we feel suit small to medium sized businesses in the
                 quest for better hiring. We also appreciate that sometimes that isn't quite enough, which is why we
                 offer a premium account for companies looking to grow on a larger scale.
@@ -1388,7 +1409,7 @@
                 </div>
               </div>
 
-              <p class="c-faq__p" style="display: none; opacity: 0;">
+              <p class="c-faq__p">
                 Our systems are all protected by state-of-the-art security protocols ensuring that all of your data, and
                 your candidates' data, is fully protected.
               </p>
@@ -1406,7 +1427,7 @@
                 </div>
               </div>
 
-              <p class="c-faq__p" style="display: none; opacity: 0;">
+              <p class="c-faq__p">
                 As a B Corp Pending company, we pride ourselves on supporting charitable organisations. We currently
                 offer a discount to all B Corp organisations, the NHS and Emergency services. If you are interested in
                 learning more about our discounts for non-profits
@@ -1425,7 +1446,7 @@
                 </div>
               </div>
 
-              <p class="c-faq__p" style="display: none; opacity: 0;">
+              <p class="c-faq__p">
                 We've all been there! To reset your password, simply head to the login screen, click 'forgot password'
                 and follow the steps from there.
               </p>
@@ -1434,6 +1455,24 @@
           </div>
         </div>
       </div>
+
+
+      <script>
+        var acc = document.getElementsByClassName("c-faq__upper");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+          acc[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "none") {
+              panel.style.opacity = "block";
+            } else {
+              panel.style.display = "none";
+            }
+          });
+        }
+      </script>
 
     </section>
 
@@ -1469,7 +1508,7 @@
             </h1>
           </div>
           <div class="c-tag__holder cc-pre-footer faded-btn">
-            <a href="#" target="_blank" class="c-btn cc-with-icon cc-white ppc-book-4 w-inline-block">
+            <a href="bookdemo.html" target="_blank" class="c-btn cc-with-icon cc-white ppc-book-4 w-inline-block">
               <div class="text-block-15">Book your demo with us here</div>
               <img
                 src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf2afe0a07b4_arrow%20right%20copy%202.svg"
@@ -1495,10 +1534,10 @@
                     class="c-footer__logo-svg">
                 </a>
                 <div class="flex-wrapper cc-socials">
-                  <a href="#" class="c-btn cc-no-border white mg-right__20 faded-btn w-button">
+                  <a href="login.html" class="c-btn cc-no-border white mg-right__20 faded-btn w-button">
                     Log in
                   </a>
-                  <a href="#" class="c-btn cc-light white-border faded-btn w-button">
+                  <a href="bookdemo.html" class="c-btn cc-light white-border faded-btn w-button">
                     Get started
                   </a>
 
@@ -1654,6 +1693,11 @@
     </footer>
 
   </main>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
