--- a/save-time.html
+++ b/save-time.html
@@ -68,8 +68,6 @@
       <nav class="nav-menu w-nav-menu" id="myLinks">
         <div class="w-dropdown" style="z-index: 999;">
           <div class="w-dropdown-toggle" onclick="whyOpen()">
-            <div class="w-icon-dropdown-toggle">
-            </div>
             <div>Why Stryve</div>
           </div>
 
@@ -362,7 +360,7 @@
                     alt="" class="c-nav__arrow-svg cc-hover">
                 </a></div>
               <div class="c-nav-middle__flex-holder cc-turquoise" onclick="myFunction()">
-                <a data-w-id="76cb24e1-63ba-aed2-336b-0b764f7be43c" href="#" target="_blank"
+                <a data-w-id="76cb24e1-63ba-aed2-336b-0b764f7be43c" target="_blank"
                   class="c-nav__flex-item mg-btm__8 cc-green-hover w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0" rel="noopener noreferrer">
@@ -446,11 +444,32 @@
 
         </div>
         <div class="nav-line__separator"></div>
-        <a href="#" class="w-nav-link">Book a Demo</a>
+        <a href="#" target="_blank" class="w-nav-link" onclick="bookdemo()">Book a Demo</a>
 
-        <a href="#" class="w-nav-link">Sign up</a>
+        <script>
+          function bookdemo() {
+            window.open("bookdemo.html")
+            console.log("You click on book a demo part.")
+          }
+        </script>
 
-        <a href="#" class="c-bg__white w-nav-link">Log in</a>
+        <a href="#" target="_blank" class="w-nav-link" onclick="signup()">Sign up</a>
+
+        <script>
+          function signup() {
+            window.open("signup.html")
+            console.log("You clicked on sign up page")
+          }
+        </script>
+
+        <a href="#" class="c-bg__white w-nav-link" onclick="login()">Log in</a>
+
+        <script>
+          function login() {
+            window.open("login.html")
+            console.log("You clicked on sign up page")
+          }
+        </script>
       </nav>
 
 
@@ -866,7 +885,7 @@
 
       </div>
       <div class="flex-wrapper center">
-        <a href="#" class="c-btn cc-with-icon w-inline-block">
+        <a href="bookdemo.html" class="c-btn cc-with-icon w-inline-block">
           <div>Book a demo today</div>
           <img src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf9bfb0a0658_arrow.svg"
             class="c-icon__arrow" alt="right arrow">
@@ -1027,7 +1046,7 @@
                 loading="lazy" alt="light pink full circle" class="c-assess__svg"></div>
           </div>
 
-          <a href="#" target="_blank" class="c-btn cc-beige w-button">Show me the talent</a>
+          <a href="bookdemo.html" target="_blank" class="c-btn cc-beige w-button">Show me the talent</a>
         </div>
       </div>
     </section>
@@ -1188,7 +1207,7 @@
               </div>
             </h3>
             <div class="btn-holder cc-35 mg-top__20">
-              <a href="#" class="c-btn cc-with-icon w-inline-block">
+              <a href="bookdemo.html" class="c-btn cc-with-icon w-inline-block">
                 <div>Let's talk</div>
                 <img class="c-icon__arrow" alt="right-arrow"
                   src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf9bfb0a0658_arrow.svg">
@@ -1274,16 +1293,16 @@
           <div class="c-footer__upper">
             <div class="w-layout-grid footer-grid">
               <div class="c-footer__logo-part upper">
-                <a href="#" class="c-footer__logo w-inline-block w--current">
+                <a href="bookdemo.html" class="c-footer__logo w-inline-block w--current">
                   <img
                     src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf256f0a06d6_Group%20104.svg"
                     class="c-footer__logo-svg">
                 </a>
                 <div class="flex-wrapper cc-socials">
-                  <a href="#" class="c-btn cc-no-border white mg-right__20 faded-btn w-button">
+                  <a href="login.html" class="c-btn cc-no-border white mg-right__20 faded-btn w-button">
                     Log in
                   </a>
-                  <a href="#" class="c-btn cc-light white-border faded-btn w-button">
+                  <a href="bookdemo.html" class="c-btn cc-light white-border faded-btn w-button">
                     Get started
                   </a>
 
